--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,76 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    background-color: #f8f8f8;
 }
 
-.ramen-gallery img {
-    width: 100px;
-    height:100px;
-    margin: 5px;
+h1 {
+    color: white;
+    background-color: black;
+}
+
+pics {
+    display: flex;
+    justify-content: center;
+}
+
+.pics img {
+    width: 200px;
+    height: 150px;
     cursor: pointer;
+    border-radius: 5px;
+    transition: transform 0.2s ease-in-out;
 }
-.ramen-display img {
-    width: 300px;
-    height: auto;
+
+.pics img:hover {
+    transform: scale(1.1);
 }
-.add-ramen-form {
+
+#ramen-detail {
     margin-top: 20px;
 }
-input, button {
+
+.main-image {
+    margin: 300px;
+    height: 250px;
+    object-fit: cover;
     display: block;
-    margin: 5px auto;
-    padding: 8px;
+    margin: 0 auto;
+    border-radius: 10px;
 }
 
+.form-container {
+    width: 300px;
+    margin: 0 auto;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
+.form-container input,
+button {
+    display: block;
+    width: 90%;
+    margin: 10px auto;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid black;
+}
 
+.form-container button {
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    border: none;
+}
 
+.form-container button:hover {
+    background-color: black;
+}
+
+#ramen-form p {
+    font-weight: bold;
+}
+h3 {
+    background-color: black;
+    color: white;
+}
 
